# modbus-demo-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  modbus_configuration.json  run.sh  settings.txt  unabto_queries.xml
src/: modbus_application.c  modbus_application.h  modbus_rtu_master.c  modbus_rtu_master.h  uart.h  uart_unix.c  uart_unix.h  unabto_config.h  unabto_main.c
src/modbus_slave_stub/: .gitignore  compile.sh  install-libmodbus.sh  run.sh  stub.c
